update for deployment

--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
     </dependencies>
 
     <build>
-        <finalName>jrmmba-foundation</finalName>
+        <finalName>tt-web58-recipe-app</finalName>
 
         <plugins>
             <plugin>
