--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>[Cloudinary API version, e.g. 1.1.3]</version>
+        </dependency>
+
     </dependencies>
 
     <build>
